--- a/MultiplyGame.html
+++ b/MultiplyGame.html
@@ -95,7 +95,7 @@
       <div id="timer">⏳ זמן שנותר: 60</div>
       <div id="score">⭐ ניקוד: 0</div>
       <div id="question">מוכן?</div>
-      <input id="answer" type="tel" placeholder="תשובתך" />
+      <input id="answer" type="number" inputmode="numeric" placeholder="תשובתך" />
       <div id="feedback"></div>
     </div>
     <div id="results" style="display:none;">
